@@ -6,19 +6,18 @@ import core.domain.user.repository.BlockRepository;
 import core.domain.user.repository.FollowRepository;
 import core.domain.user.repository.UserRepository;
 import core.global.entity.image.service.ImageService;
-import core.global.enums.user.FollowStatus;
-import core.global.exception.BusinessException;
+import core.global.enums.FollowStatus;
 import core.global.enums.errorcode.UserErrorCode;
-import core.global.entity.image.repository.ImageRepository;
-import lombok.AllArgsConstructor; // [추가]
-import lombok.Getter; // [추가]
+import core.global.exception.BusinessException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.Instant; // [추가]
-import java.time.temporal.ChronoUnit; // [추가]
+import java.security.SecureRandom;
+import java.time.Duration;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -28,24 +27,27 @@ import java.util.stream.Collectors;
 public class ContentBasedRecommender {
 
     private final UserRepository userRepository;
-    private final ImageRepository imageRepository;
     private final BlockRepository blockRepository;
     private final FollowRepository followRepository;
-
-    private static final double KOREAN_PRIORITY_BOOST = 0.5;
-    private static final double TEMPERATURE = 0.7;
-    private static final double ACTIVITY_SCORE_HALF_LIFE_DAYS = 1.0;
-    private static final java.security.SecureRandom RAND = new java.security.SecureRandom();
     private final ImageService imageService;
+    private final SecureRandom secureRandom = new SecureRandom();
 
+    // --- [가중치 설정] 접속 시간과 활동량에 '올인' ---
+    private static final double WEIGHT_RECENCY = 0.6;    // 최근 접속 (60%) - 가장 중요
+    private static final double WEIGHT_ACTIVITY = 0.3;   // 활동량 (30%) - 채팅/방문 많은 사람
+    private static final double WEIGHT_SIMILARITY = 0.1; // 취향/국적 (10%) - 최소한의 필터
 
+    // 활동 포인트 만점 기준 (예: 1000점이면 활동 점수 만점)
+    private static final double MAX_ACTIVITY_POINT = 1000.0;
+    private static final double MAX_VISIT_COUNT = 50.0;
 
     @Transactional(readOnly = true)
     public List<CommendUsersProfileResponse> recommendForUser(Long meId, int limit) {
-
+        // 1. 내 정보 조회
         User me = userRepository.findById(meId)
                 .orElseThrow(() -> new BusinessException(UserErrorCode.USER_NOT_FOUND));
 
+        // 2. 제외 대상 필터링
         List<FollowStatus> statusesToExclude = List.of(FollowStatus.PENDING, FollowStatus.ACCEPTED);
         Set<Long> followingIds = followRepository.findFollowingIdsByUserId(meId, statusesToExclude);
         Set<Long> blockedIds = blockRepository.findAllBlockedUserIds(meId);
@@ -53,90 +55,118 @@ public class ContentBasedRecommender {
         Set<Long> excludeIds = new HashSet<>(followingIds);
         excludeIds.addAll(blockedIds);
         excludeIds.add(meId);
-        if (excludeIds.isEmpty()) {
-            excludeIds.add(0L);
+        if (excludeIds.isEmpty()) excludeIds.add(0L);
+
+        // [변경] 검색 범위: 최근 24시간 이내 접속자로 제한 (최우선)
+        Instant activeLimit = Instant.now().minus(1, ChronoUnit.DAYS);
+        List<User> candidates = userRepository.findActiveCandidates(excludeIds, activeLimit);
+
+        // [Fallback] 24시간 이내 접속자가 너무 적으면 최근 3일로 확장
+        if (candidates.size() < 5) {
+            activeLimit = Instant.now().minus(3, ChronoUnit.DAYS);
+            candidates = userRepository.findActiveCandidates(excludeIds, activeLimit);
         }
 
-        List<User> allCandidates = userRepository.findFullProfiledRecommendationCandidates(excludeIds);
-
-        if (allCandidates.isEmpty()) {
+        if (candidates.isEmpty()) {
             return List.of();
         }
 
-        boolean meIsKorean = isKorean(me.getCountry());
+        // 3. 내 취향 정보 준비
+        String myCountry = me.getCountry();
+        Set<String> myHobbies = csvToSet(me.getHobby());
 
-        List<Scored<User>> scoredCandidates;
+        // 4. 점수 계산 (Recency + Activity 집중)
+        List<UserScore> scoredCandidates = candidates.stream()
+                .map(candidate -> {
+                    double score = calculateScore(candidate, myCountry, myHobbies);
+                    return new UserScore(candidate, score);
+                })
+                .sorted(Comparator.comparingDouble(UserScore::getScore).reversed())
+                .collect(Collectors.toList());
 
-        if (meIsKorean) {
-            scoredCandidates = allCandidates.stream()
-                    .filter(user -> !isKorean(user.getCountry()))
-                    .map(user -> new Scored<>(
-                            user,
-                            calculateActivityScore(user, ACTIVITY_SCORE_HALF_LIFE_DAYS)
-                    ))
-                    .collect(Collectors.toList());
+        // 5. 상위권 셔플 (고인물 고착화 방지용 최소한의 셔플)
+        // 점수가 높은 상위 10명 중에서만 랜덤으로 3명을 뽑음
+        int poolSize = Math.min(scoredCandidates.size(), 10);
+        List<UserScore> topTierPool = new ArrayList<>(scoredCandidates.subList(0, poolSize));
+        Collections.shuffle(topTierPool, secureRandom);
 
-        } else {
-            scoredCandidates = allCandidates.stream()
-                    .map(user -> {
-                        double activityScore = calculateActivityScore(user, ACTIVITY_SCORE_HALF_LIFE_DAYS);
-                        double boost = isKorean(user.getCountry()) ? KOREAN_PRIORITY_BOOST : 0.0;
-                        return new Scored<>(user, activityScore + boost);
-                    })
-                    .collect(Collectors.toList());
-        }
-
-        if (scoredCandidates.isEmpty()) {
-            return List.of();
-        }
-
-        List<User> chosen = pickGumbelTopK(scoredCandidates, limit, TEMPERATURE);
-        return chosen.stream().map(this::toDto).toList();
+        return topTierPool.stream()
+                .limit(limit)
+                .map(us -> toDto(us.getUser()))
+                .collect(Collectors.toList());
     }
 
     /**
-     * [신규 헬퍼 메서드]
-     * 국가 문자열을 기반으로 한국인 여부를 판단합니다.
-     * TODO: DB에 저장된 실제 '한국' 값으로 변경하세요 (예: "KR", "Republic of Korea" 등)
+     * [점수 계산 로직]
+     * Score = (최근접속 * 0.6) + (활동량 * 0.3) + (유사도 * 0.1)
      */
-    private boolean isKorean(String country) {
-        if (country == null || country.isBlank()) {
-            return false;
-        }
-        String c = country.trim();
-        return "South Korea".equalsIgnoreCase(c) || "Korea".equalsIgnoreCase(c);
+    private double calculateScore(User candidate, String myCountry, Set<String> myHobbies) {
+
+        // 1. Recency Score (최근 접속)
+        double recencyScore = calculateRecencyScore(candidate.getLastSeenAt());
+
+        // 2. Activity Score (활동량 - 포인트 + 방문수)
+        double activityScore = calculateActivityScore(candidate);
+
+        // 3. Similarity Score (유사도)
+        double similarityScore = calculateSimilarityScore(candidate, myCountry, myHobbies);
+
+        // 최종 합산
+        return (recencyScore * WEIGHT_RECENCY)
+                + (activityScore * WEIGHT_ACTIVITY)
+                + (similarityScore * WEIGHT_SIMILARITY);
     }
 
+    /**
+     * [최근 접속 점수]
+     * 10분 이내 접속 시 1.0 (초강력), 시간이 지날수록 급격히 하락
+     */
+    private double calculateRecencyScore(Instant lastSeenAt) {
+        if (lastSeenAt == null) return 0.0;
 
-    @Getter @AllArgsConstructor
-    private static class Scored<T> { private T item; private double score; }
+        long minutesAgo = Duration.between(lastSeenAt, Instant.now()).toMinutes();
+        if (minutesAgo <= 10) return 1.0; // 방금 접속한 사람 최고 우대
+        if (minutesAgo <= 60) return 0.9; // 1시간 이내
 
-    /** Gumbel-Top-k: key = score/T + Gumbel(0,1) 로 정렬 → 상위 limit 선택(중복 없음) */
-    private List<User> pickGumbelTopK(List<Scored<User>> pool, int limit, double temperature) {
-        class Draw { final User u; final double key; Draw(User u, double key){this.u=u; this.key=key;} }
-        List<Draw> draws = new ArrayList<>(pool.size());
-        double T = Math.max(1e-6, temperature);
-        for (Scored<User> s : pool) {
-            double u = RAND.nextDouble();
-            double gumbel = -Math.log(-Math.log(u));
-            double key = (s.score / T) + gumbel;
-            draws.add(new Draw(s.item, key));
-        }
-        draws.sort((a, b) -> Double.compare(b.key, a.key));
-        return draws.stream().limit(Math.max(1, limit)).map(d -> d.u).toList();
+        // 24시간(1440분)이 지나면 점수가 0에 가깝게 떨어짐
+        return Math.exp(-((double) minutesAgo / 1440.0));
     }
 
-    /** 사용자의 마지막 활동 시간(lastSeenAt)을 바탕으로 0.0 ~ 1.0 사이의 활동 점수를 계산 */
-    private double calculateActivityScore(User user, double halfLifeDays) {
-        if (user.getLastSeenAt() == null) {
-            return 0.0;
+    /**
+     * [활동성 점수 계산 - 최종판]
+     * 1. 응답률 (Quality): 답장을 잘 해주는가? (40%)
+     * 2. 활동 포인트 (Quantity): 채팅을 많이 치는가? (30%)
+     * 3. 방문 횟수 (Frequency): 자주 오는가? (30%)
+     */
+    private double calculateActivityScore(User u) {
+        double rate = (u.getReplyRate() != null) ? u.getReplyRate() : 0.5;
+
+        long points = (u.getActivityPoint() != null) ? u.getActivityPoint() : 0L;
+        double pointScore = Math.min(points / 1000.0, 1.0);
+        long visits = (u.getVisitCount() != null) ? u.getVisitCount() : 0L;
+        double visitScore = Math.min(visits / 50.0, 1.0);
+
+        return (rate * 0.4) + (pointScore * 0.3) + (visitScore * 0.3);
+    }
+    /**
+     * [유사도 점수] - 보조 지표
+     */
+    private double calculateSimilarityScore(User candidate, String myCountry, Set<String> myHobbies) {
+        double score = 0.0;
+        // 국적 같으면 0.5
+        if (myCountry != null && myCountry.equalsIgnoreCase(candidate.getCountry())) {
+            score += 0.5;
         }
-        long hoursSinceUpdate = ChronoUnit.HOURS.between(user.getLastSeenAt(), Instant.now());
-        double daysSinceUpdate = hoursSinceUpdate / 24.0;
-        double decayRate = Math.log(2) / halfLifeDays;
-        return Math.exp(-decayRate * daysSinceUpdate);
+        // 취미 겹치면 0.5 (개수 무관, 하나라도 겹치면)
+        Set<String> candidateHobbies = csvToSet(candidate.getHobby());
+        boolean hasCommonHobby = candidateHobbies.stream().anyMatch(myHobbies::contains);
+        if (hasCommonHobby) {
+            score += 0.5;
+        }
+        return score;
     }
 
+    // --- Helper Methods ---
     private Set<String> csvToSet(String csv) {
         if (csv == null || csv.isBlank()) return Set.of();
         return Arrays.stream(csv.split(","))
@@ -147,7 +177,18 @@ public class ContentBasedRecommender {
 
     private CommendUsersProfileResponse toDto(User u) {
         String imageKey = imageService.getUserProfileKey(u.getId());
+        return new CommendUsersProfileResponse(
+                u,
+                csvToSet(u.getLanguage()).stream().toList(),
+                csvToSet(u.getHobby()).stream().toList(),
+                imageKey
+        );
+    }
 
-        return new CommendUsersProfileResponse(u,  csvToSet(u.getLanguage()).stream().toList(), csvToSet(u.getHobby()).stream().toList(),imageKey);
+    @lombok.AllArgsConstructor
+    @lombok.Getter
+    private static class UserScore {
+        private User user;
+        private double score;
     }
 }
